# cargo-vendor-git-bug

./: Cargo.toml
