[package]
name = "gitvendor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.prost]
git = "https://github.com/danburkert/prost.git"
rev = "6113789f70b69709820becba4242824b4fb3ffec"
default-features = false
features = ["prost-derive"]
